# pxljm14

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  config.json
README/: README.txt
ext/spine-c/: CMakeLists.txt
ext/spine-c/src/spine/: CMakeLists.txt
res/: CMakeLists.txt  example.txt
res/config/: PlatformGame.json
res/dog/: skeleton.atlas  skeleton.json
res/shader/: background.glsl  chunk_standard.glsl  hdr.glsl  scene.glsl  scene_default.glsl  showtex.glsl  spine.glsl
res/spine/drone/: drone.atlas  drone.json
res/spine/fireball/: fireball.atlas  fireball.json
res/spine/protagonist/: protagonist.atlas  protagonist.json
res/textures/: bg_tmp18238
src/: CMakeLists.txt
src/game/: CMakeLists.txt  platform.cpp
src/ge2d/: CMakeLists.txt  Game.hpp  State.hpp  Window.cpp  Window.hpp  game.hpp  ge2d.hpp  state_manager.hpp
src/ge_common/: CMakeLists.txt  Concurrent.hpp  Config.hpp  GECom.hpp  Log.cpp  Log.hpp  json11.cpp  json11.hpp
src/gecom/: Bound.hpp  Box2D.cpp  Box2D.hpp  CMakeLists.txt  Concurrent.hpp  Config.hpp  EngineComponent.hpp  Entity.cpp  Entity.hpp  GECom.hpp  GL.hpp  Game.cpp  Game.hpp  GameComponent.hpp  Image.hpp  Log.cpp  Log.hpp  PNG.hpp  Perlin.cpp  Perlin.hpp  ProtagonistDrawable.hpp  Quadtree.hpp  Render.cpp  Render.hpp  Resource.hpp  Scene.hpp  Shader.hpp  SnapIn.hpp  SpineDrawable.cpp  SpineDrawable.hpp  State.hpp  UnitSquare.hpp  Window.cpp  Window.hpp  json11.cpp  json11.hpp
src/gegame/: CMakeLists.txt  DEPRECATED.txt  Fs.hpp  GEGame.hpp  Game.hpp  ResourceManager.hpp  Scene.hpp  State.hpp  Window.cpp  Window.hpp
src/platform/: CMakeLists.txt  Platform.cpp
src/pxljm/: CMakeLists.txt  Collectable.hpp  Level.cpp  Level.hpp  Player.cpp  Player.hpp  PlayerEntity.cpp  PlayerEntity.hpp  ProtagonistDrawable.cpp  ProtagonistDrawable.hpp  PxlJm.cpp
